--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #f9f9f9;
+            background-color: #e6d5f5;
         }
         .header {
-            background-color: #ff8c00;
+            background-color: #d8b4f8;
             color: white;
             padding: 20px;
             font-size: 24px;
             font-weight: bold;
+            border-radius: 10px 10px 0 0;
         }
         .section {
             padding: 50px;
+            color: #5c3c92;
         }
         .features {
             display: flex;
@@ -36,10 +38,11 @@
             width: 250px;
         }
         .footer {
-            background-color: #333;
+            background-color: #b38cd9;
             color: white;
             padding: 20px;
             margin-top: 20px;
+            border-radius: 0 0 10px 10px;
         }
     </style>
 </head>
@@ -69,7 +72,7 @@
     <div class="section">
         <h2>Get Started Today</h2>
         <p>Download Baby Growth AI and take control of your baby's growth journey.</p>
-        <a href="#" style="background:#ff8c00; color:white; padding:10px 20px; text-decoration:none; border-radius:5px;">Download Now</a>
+        <a href="#" style="background:#d8b4f8; color:white; padding:10px 20px; text-decoration:none; border-radius:5px;">Download Now</a>
     </div>
     
     <div class="footer">&copy; 2025 Baby Growth AI. All Rights Reserved.</div>
