--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="BabyID_AI_Logo.png" alt="BabyID AI Logo">
+        <img src="Baby Growth (2).png" alt="BabyID AI Logo">
         BabyID AI
     </div>
     
