--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <img src="Baby Growth (2).png" alt="BabyID AI Logo">
-        BabyID AI
-    </div>
+    <div class="header">BabyID AI</div>
     
     <div class="section">
-        <h2>Why Tracking Your Baby's Growth is Important</h2>
+        <img src="Baby Growth (2).png" alt="BabyID AI Logo" style="width:150px; display:block; margin: 0 auto;">
+        
+        
         <p>Monitoring your baby's growth is essential for ensuring healthy development. Our app helps parents track their baby's weight, height, and other key milestones, providing valuable insights into their child's progress.</p>
         <p>By following scientifically validated growth standards, parents can detect early signs of potential issues and consult pediatricians when necessary.</p>
     </div>
