--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
             margin-top: 20px;
             border-radius: 0 0 10px 10px;
         }
+        .contact {
+            margin-top: 15px;
+            font-size: 16px;
+        }
+        .contact a {
+            color: white;
+            font-weight: bold;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -59,7 +68,6 @@
     <div class="section">
         <img src="Baby Growth (2).png" alt="BabyID AI Logo" style="width:150px; display:block; margin: 0 auto;">
         
-        
         <p>Monitoring your baby's growth is essential for ensuring healthy development. Our app helps parents track their baby's weight, height, and other key milestones, providing valuable insights into their child's progress.</p>
         <p>By following scientifically validated growth standards, parents can detect early signs of potential issues and consult pediatricians when necessary.</p>
     </div>
@@ -91,6 +99,11 @@
         <a href="#" style="background:#d8b4f8; color:white; padding:10px 20px; text-decoration:none; border-radius:5px;">Download Now</a>
     </div>
     
-    <div class="footer">&copy; 2025 BabyID AI. All Rights Reserved.</div>
+    <div class="footer">
+        &copy; 2025 BabyID AI. All Rights Reserved.
+        <div class="contact">
+            Contact us: <a href="mailto:pgmetastudios@gmail.com">pgmetastudios@gmail.com</a>
+        </div>
+    </div>
 </body>
 </html>
